{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 181,
  "lineage": "f9132acb-c6a1-a6d3-fb96-8d414fd851e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "actrafer_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:021206589350:loadbalancer/app/actrafer-alb/b4e6b7abf100f33e",
            "arn_suffix": "app/actrafer-alb/b4e6b7abf100f33e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "actrafer-alb-795124423.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:021206589350:loadbalancer/app/actrafer-alb/b4e6b7abf100f33e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "actrafer-alb",
            "security_groups": [
              "sg-0d4ced6c60aba2812"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-075fe8b47e3abb284"
              },
              {
                "subnet_id": "subnet-0e700f674dc502b1e"
              }
            ],
            "subnets": [
              "subnet-075fe8b47e3abb284",
              "subnet-0e700f674dc502b1e"
            ],
            "vpc_id": "vpc-0b6411a9de20013ac",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.actrafer_ecs_alb",
            "aws_subnet.actrafer_public_1a",
            "aws_subnet.actrafer_public_1b",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "actrafer_ecs_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:021206589350:targetgroup/actrafer-alb-target-group/cbe8bc5225c55030",
            "arn_suffix": "targetgroup/actrafer-alb-target-group/cbe8bc5225c55030",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:021206589350:targetgroup/actrafer-alb-target-group/cbe8bc5225c55030",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "actrafer-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "dependencies": [
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "actrafer_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044a3de5db2ccb126",
            "domain": "vpc",
            "id": "eipalloc-044a3de5db2ccb126",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-63-32-38-13.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.32.38.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion-actrafer"
            },
            "tags_all": {
              "Name": "bastion-actrafer"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "actrafer_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e285d16f248e5649",
            "domain": "vpc",
            "id": "eipalloc-0e285d16f248e5649",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-50-172-112.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.172.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-gateway-actrafer"
            },
            "tags_all": {
              "Name": "nat-gateway-actrafer"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "actrafer_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2616929f1e63d91",
            "arn": "arn:aws:ec2:eu-west-1:021206589350:instance/i-0902e9505f49711df",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0902e9505f49711df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "actrafer.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ac0f3b592f1ac0b",
            "private_dns": "ip-10-0-1-50.eu-west-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-31-157-7.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.157.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-076620a81428453f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e2f8b14a50591e6b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e700f674dc502b1e",
            "tags": {
              "Name": "bastion-actrafer"
            },
            "tags_all": {
              "Name": "bastion-actrafer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2f8b14a50591e6b"
            ]
          },
          "dependencies": [
            "aws_key_pair.actrafer",
            "aws_security_group.actrafer_bastion",
            "aws_subnet.actrafer_public_1a",
            "aws_vpc.actrafer",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "actrafer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:internet-gateway/igw-063c079dd3a760399",
            "id": "igw-063c079dd3a760399",
            "owner_id": "021206589350",
            "tags": {
              "Name": "actrafer-igw"
            },
            "tags_all": {
              "Name": "actrafer-igw"
            },
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "dependencies": [
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "actrafer_alb_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:021206589350:listener/app/actrafer-alb/b4e6b7abf100f33e/62b3851dde6a2142",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:021206589350:targetgroup/actrafer-alb-target-group/cbe8bc5225c55030",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:021206589350:listener/app/actrafer-alb/b4e6b7abf100f33e/62b3851dde6a2142",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:021206589350:loadbalancer/app/actrafer-alb/b4e6b7abf100f33e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.actrafer_alb",
            "aws_alb_target_group.actrafer_ecs_80",
            "aws_security_group.actrafer_ecs_alb",
            "aws_subnet.actrafer_public_1a",
            "aws_subnet.actrafer_public_1b",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "actrafer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e285d16f248e5649",
            "connectivity_type": "public",
            "id": "nat-0b5d19384fab137d0",
            "network_interface_id": "eni-0f65c305183b11a6e",
            "private_ip": "10.0.1.206",
            "public_ip": "52.50.172.112",
            "subnet_id": "subnet-0e700f674dc502b1e",
            "tags": {
              "Name": "actrafer-nat-gateway"
            },
            "tags_all": {
              "Name": "actrafer-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.actrafer_ngw",
            "aws_internet_gateway.actrafer",
            "aws_subnet.actrafer_public_1a",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "actrafer_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:route-table/rtb-04c2043431fb840b2",
            "id": "rtb-04c2043431fb840b2",
            "owner_id": "021206589350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b5d19384fab137d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "actrafer-route-table-private"
            },
            "tags_all": {
              "Name": "actrafer-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.actrafer_ngw",
            "aws_internet_gateway.actrafer",
            "aws_nat_gateway.actrafer",
            "aws_subnet.actrafer_public_1a",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "actrafer_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:route-table/rtb-07aefe185bbc96bf4",
            "id": "rtb-07aefe185bbc96bf4",
            "owner_id": "021206589350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063c079dd3a760399",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "actrafer-route-table-public"
            },
            "tags_all": {
              "Name": "actrafer-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.actrafer",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "actrafer_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0404ff8f2f2816c4a",
            "route_table_id": "rtb-04c2043431fb840b2",
            "subnet_id": "subnet-0a257f9060edd854a"
          },
          "dependencies": [
            "aws_eip.actrafer_ngw",
            "aws_internet_gateway.actrafer",
            "aws_nat_gateway.actrafer",
            "aws_route_table.actrafer_rt_private",
            "aws_subnet.actrafer_private_1a",
            "aws_subnet.actrafer_public_1a",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "actrafer_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b67b8a17e59da5fa",
            "route_table_id": "rtb-04c2043431fb840b2",
            "subnet_id": "subnet-00ccb55f53ed3aeed"
          },
          "dependencies": [
            "aws_eip.actrafer_ngw",
            "aws_internet_gateway.actrafer",
            "aws_nat_gateway.actrafer",
            "aws_route_table.actrafer_rt_private",
            "aws_subnet.actrafer_private_1b",
            "aws_subnet.actrafer_public_1a",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "actrafer_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dea63d8c76bc40c",
            "route_table_id": "rtb-07aefe185bbc96bf4",
            "subnet_id": "subnet-0e700f674dc502b1e"
          },
          "dependencies": [
            "aws_internet_gateway.actrafer",
            "aws_route_table.actrafer_rt_public",
            "aws_subnet.actrafer_public_1a",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "actrafer_public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccb49ad48136939f",
            "route_table_id": "rtb-07aefe185bbc96bf4",
            "subnet_id": "subnet-075fe8b47e3abb284"
          },
          "dependencies": [
            "aws_internet_gateway.actrafer",
            "aws_route_table.actrafer_rt_public",
            "aws_subnet.actrafer_public_1b",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "actrafer_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:security-group/sg-0e2f8b14a50591e6b",
            "description": "Security Groups de la Bastion de Actrafer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2f8b14a50591e6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "84.79.191.0/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "actrafer-bastion",
            "name_prefix": "",
            "owner_id": "021206589350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "actrafer-bastion"
            },
            "tags_all": {
              "Name": "actrafer-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "actrafer_ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:security-group/sg-0d4ced6c60aba2812",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d4ced6c60aba2812",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "actrfer-ecs-alb",
            "name_prefix": "",
            "owner_id": "021206589350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "actrafer-ecs-alb"
            },
            "tags_all": {
              "Name": "actrafer-ecs-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "actrafer_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:security-group/sg-081aac0b031ddf5b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-081aac0b031ddf5b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 49153,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4ced6c60aba2812"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "actrfer-ecs",
            "name_prefix": "",
            "owner_id": "021206589350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "actrafer-ecs"
            },
            "tags_all": {
              "Name": "actrafer-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.actrafer_ecs_alb",
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "actrafer_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:subnet/subnet-0a257f9060edd854a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a257f9060edd854a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021206589350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "actrafer-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "actrafer-private-eu-west-1a"
            },
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "dependencies": [
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "actrafer_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:subnet/subnet-00ccb55f53ed3aeed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ccb55f53ed3aeed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021206589350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "actrafer-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "actrafer-private-eu-west-1b"
            },
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "dependencies": [
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "actrafer_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:subnet/subnet-0e700f674dc502b1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e700f674dc502b1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021206589350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "actrafer-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "actrafer-public-eu-west-1a"
            },
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "dependencies": [
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "actrafer_public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:subnet/subnet-075fe8b47e3abb284",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075fe8b47e3abb284",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021206589350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "actrafer-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "actrafer-public-eu-west-1b"
            },
            "vpc_id": "vpc-0b6411a9de20013ac"
          },
          "dependencies": [
            "aws_vpc.actrafer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "actrafer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:021206589350:vpc/vpc-0b6411a9de20013ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00151394b62984299",
            "default_route_table_id": "rtb-06ecf5ea936cdd33f",
            "default_security_group_id": "sg-031cdbd6f18566622",
            "dhcp_options_id": "dopt-0fa5afc151c7f3247",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b6411a9de20013ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ecf5ea936cdd33f",
            "owner_id": "021206589350",
            "tags": {
              "Name": "actrafer"
            },
            "tags_all": {
              "Name": "actrafer"
            }
          }
        }
      ]
    }
  ]
}